5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1590_1446.log
== TEST (2019-03-20 15:39:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = float(input("quantos litros de polpa de fruta?  "))
print(round(var, 3)var)
-- ERROR:
File "XXXX", line 5
    print(round(var, 3)var)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = float(input("quantos litros de polpa de fruta?  "))

-- ERROR:
File "XXXX", line 5
    print(round(var, 3)var)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:26:18) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var /2*3
print(roud(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(x, 3))
NameError: name 'roud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:26:39) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var /2*3
print(round(x, 3))
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:26:57) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var/2*3
print(round(x, 3))
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:27:25) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var/3
print(round(x, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:27:44) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var/3
print(round(x, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:27:59) 
-- CODE:
var = float(input("quantos litros de frutas? "))

#calculo da doação a ser feita
x = var/3
print(round(x, 3))
-- EXECUTION TIME:
0.193865
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
